# Lectio

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/plans/: project-completion.md
.github/agents/: Bug fixing.agent.md
.github/workflows/: update-calendar.yml
docs/: assignments.ics  calendar.ics  free_classrooms.ics
docs/execplans/: auto-cookie-refresh.md  fix-free-classrooms-stale-html.md  logon-trigger-cookie-refresh.md  room-first-event-title.md
docs/execplans and HTML examples/: HTML example of calendar for classrooms  classroom-finder-free-rooms-ics.md  cookie-header-refresh-options.md
scripts/: auto_refresh_cookie.ps1  install_skills.ps1  refresh_cookie.ps1  register_scheduled_task.ps1  update_ics.ps1  update_ics_and_push.ps1
src/lectio_sync/: cli.py  config.py  cookie_refresh.py  free_classrooms.py  html_parser.py
tests/: test_assignments_parser.py  test_cli.py  test_cookie_refresh.py  test_cookie_refresh_headless.py  test_free_classrooms.py  test_html_parser.py  test_ical_writer.py  test_lectio_fetch.py
