[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lectio-sync"
version = "1.0.0"
description = "Parse Lectio Advanced Schedule HTML to iCalendar (.ics)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arthur Dahlgaard Lou" }]
license = { text = "MIT" }
keywords = ["lectio", "icalendar", "ics", "calendar", "school"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "python-dateutil==2.9.0.post0",
]

[project.scripts]
lectio-ics = "lectio_sync.cli:main"

[project.urls]
Homepage = "https://github.com/2zap2/Lectio"
"Bug Tracker" = "https://github.com/2zap2/Lectio/issues"

[project.optional-dependencies]
# Needed for the --refresh-cookie CLI flag and scripts/refresh_cookie.ps1.
# Install once with:
#   py -m pip install "lectio-sync[cookie-refresh]"
#   py -m playwright install chromium
cookie-refresh = ["playwright>=1.40"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
